--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title:       Honno's Blog
+title:       The Bloggo
 email:       quitesimplymatt@gmail.com
 author:      Matthew Barber
 description: Personal blog of Matthew Barber.
 baseurl:     ""
 url:         "https://blog.matthewbarber.io"
 date_format: "%b %-d, %Y"
-header_pages:
 
 # Google services
 google_verification:
@@ -21,13 +20,13 @@ bing_verification:
 animated:             false
 show_related_posts:   false
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
 extended_fonts: false
 enable_anchorjs: false
 # Preview image for social media aka og:image and twitter:image
-post_preview_image: false
+post_preview_image: true
 
 # Facebook Page integration
 # (for instant articles and other stuff)
