--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       The Bloggo
+title:       Matthew's Blog
 email:       quitesimplymatt@gmail.com
 author:      Matthew Barber
 description: Personal blog of Matthew Barber.
